--- a/papers/EPIA2019/main.tex
+++ b/papers/EPIA2019/main.tex
@@ -41,9 +41,9 @@
 %\newcommand{\campus}{Alpha }
 
 \begin{abstract}
-Solving university timetabling problems is a large and complex task. Moreover, every now and then, a new timetable is likely to be scheduled as a result of minor disruptions. However, a timetable does not need to be scheduled from scratch every time a disruption occurs. Solving the timetabling problem from scratch could produce a completely different solution from the previous one, thus bringing undesirable changes for many actors. 
+Solving university timetabling problems is a large and complex task. Moreover, every now and then, a new timetable is likely to be scheduled due to minor disruptions. However, a timetable does not need to be scheduled from scratch every time a disruption occurs. Solving the timetabling problem from scratch can produce a completely different solution from the previous one, thus creating undesirable changes for many actors. 
 
-This paper addresses the \gls{mpp} in university timetabling. Given a set of disruptions that make a timetable no longer feasible, the \gls{mpp} finds a new timetable with the smallest number of perturbations with respect to the original timetable. We propose and analyze two different integer programming models to solve the \gls{mpp}. To validate the proposed models, disruptions are randomly generated based on the probability distributions learned from the history of timetables over the last five years in the \uni. Overall, our models, combined with an incremental approach, are shown to be able to efficiently solve all problem instances.
+This paper addresses the \gls{mpp} in university timetabling. Given a set of disruptions that make a timetable no longer feasible, the \gls{mpp} finds a new feasible timetable with the smallest number of perturbations with respect to the original timetable. We propose and analyze two different integer programming models to solve the \gls{mpp}. To validate the proposed models, disruptions are randomly generated based on the probability distributions learned from the history of timetables over the last five years in the \uni. Overall, our models, combined with an incremental approach, are shown to be able to efficiently solve all problem instances.
 
 %Solving university timetabling problems is a large and complex task. Nevertheless, in many universities, one does not need to solve the problem from scratch. Solving the problem from scratch may produce a completely different solution which, in many cases, is an undesirable nuisance for all actors involved. The best way, to ensure stability is re-solve the problem considering only a few changes in the problem’s domain and constraints. Moreover, timetables are not completely static and some disruptions may arise during the execution of the academic year.
 
@@ -59,7 +59,7 @@ This paper addresses the \gls{mpp} in university timetabling. Given a set of dis
 \section{Introduction}
 
 
-University timetabling problems are known to be NP-complete~\cite{DBLP:journals/siamcomp/EvenIS76} since the search space for possible solutions grows exponentially with the number of events. Every semester a new timetable needs to be created. Usually, the number of changes between timetables of following years is small. The changes can be of different types: either constraints are added or changed and/or the domain of a variable is changed. These changes will most likely cause the original solution to be invalid. However, it is not necessary to generate a completely new timetable each semester. This problem can be considered a \acrlong{mpp} (\gls{mpp}) where the existing solution is no longer valid and one wants to find the \textit{closest} feasible solution. Applying this kind of approach allows the timetable to have some stability, ensuring that everything that went well previously will continue unchanged.  Furthermore, solving the problem from scratch may produce a completely different solution from the previous one.  This may negatively affect many of the actors involved. Note, however, that some disruptions may also allow a timetable to improve its quality. For quality we mean the optimization criterion underlying the schedule of a timetable. %Therefore, it is important to consider the different optimization criteria.
+University timetabling problems are known to be NP-complete~\cite{DBLP:journals/siamcomp/EvenIS76} since the search space for possible solutions grows exponentially with the number of events. Nevertheless, every semester a new timetable needs to be created. Usually, the number of changes between timetables of following years is small. These changes can be of different types: either constraints are added or changed, and/or the domain of a variable is changed. These changes will most likely cause the original solution to be infeasible. However, it is not necessary to generate a completely new timetable each semester. This problem can be considered a \acrlong{mpp} (\gls{mpp}) where the existing solution is no longer feasible and one wants to find the \textit{closest} feasible solution. Applying this kind of approach allows the timetable to have some stability, ensuring that everything that went well previously will continue unchanged.  Furthermore, solving the problem from scratch may produce a completely different solution from the previous one, which may negatively affect many of the actors involved. Note, however, that some disruptions may also allow a timetable to improve its quality. For quality we mean the optimization criterion underlying the schedule of a timetable. %Therefore, it is important to consider the different optimization criteria.
 
 In the context of university timetabling, there is one more scenario that can be modeled as an \gls{mpp}. During the execution of the semester, a timetable may require changes. The university is a dynamical system and thus the timetables should be able to change even during their execution.
 
@@ -118,7 +118,7 @@ In the context of university timetabling, there is one more scenario that can be
 Let us consider the example shown in Figure~\ref{fig:before}. The weekly timetable shows the different lectures of the different courses a student can attend. Each student having this curricular plan must attend some lectures from the four courses represented (A to D). For each course, a student must attend all theoretical lectures and only one practical / laboratory lecture. For example, a student must attend all A\textsuperscript{T} (theoretical) lectures in the schedule and only one of the two A\textsuperscript{L} (laboratory) possible lectures. 
 
 
-Consider the following disruptions: (i) room L2 is closed for renovations and (ii) the number of teachers available to teach A\textsuperscript{L} is now only one. Consider that we want to cause the smallest number of perturbations to the original solution. Disruption (i) reduces the domain of the problem. In this small example, one lecture is assigned to L2. Therefore, the original solution (\ref{fig:before}) is no longer valid. If one considers that there are only two laboratories (L1 and L2), and that L1 is already taken in the required time slot, then we conclude that the optimal solution requires two perturbations to the original solution (change room and time). Disruption (ii) adds a new {\em no overlap} constraint to the model. Note, however, that any solution containing the perturbations resulting from the first disruption already works out for this disruption. A possible solution is shown in Figure~\ref{fig:after}. 
+Consider the following disruptions applied to Example 1: (i) room L2 is closed for renovations and (ii) the number of teachers available to teach A\textsuperscript{L} is now only one. Consider that we want to cause the smallest number of perturbations to the original solution. Disruption (i) reduces the domain of the problem. In this small example, one lecture is assigned to L2. Therefore, the original solution (\ref{fig:before}) is no longer feasible. If one considers that there are only two laboratories (L1 and L2), and that L1 is already taken in the required time slot, then we conclude that the optimal solution requires two perturbations to the original solution (change room and time). Disruption (ii) adds a new {\em no overlap} constraint to the model. Note, however, that any solution containing the perturbations resulting from the first disruption already works out for this disruption. A possible solution is shown in Figure~\ref{fig:after}. 
 \end{example}
 
 
@@ -133,11 +133,11 @@ We showcase the application of the models in real-world problem instances using 
 %The random generator of disruptions is able to generate the most common disruptions. Furthermore, the user can customize the probability of happening each disruption. We showcase the application of both tools in a real-world problem with data sets from \gls{ist}. The disruption was generated with different probabilities to match the history of disruptions of the case study.
 
 This paper is organized as follows. Section~\ref{sec:rel} provides a brief overview of the relevant state of the art. Section~\ref{sec:pro} formally describes the problem. Section~\ref{sec:model} describes the different models to solve the problem.  Section~\ref{sec:eval}  discusses the generation of disruptions based on history and shows the computational results for the different models and disruptions. Finally, Section~\ref{sec:con} concludes the paper and addresses future work.
-
+\vspace{-.3cm}
 
 \section{Related Work}\label{sec:rel}
 \subsection{Timetables}
-University timetabling problems~\cite{di2007second,DBLP:conf/wea/LachL08,DBLP:conf/patat/MullerRB04,DBLP:journals/eor/VermuytenLMB16}  can be classified into two major categories: examination timetabling~\cite{M2009} and course timetabling problems~\cite{di2007second}. Many different approaches have been successfully applied for solving these problems, namely  \gls{cp}~\cite{DBLP:conf/patat/MullerRB04}, \gls{ilp}~\cite{LINDAHL2019,DBLP:journals/eor/VermuytenLMB16}, and local earch~\cite{DBLP:conf/patat/grasp}. 
+University timetabling problems~\cite{di2007second,DBLP:conf/wea/LachL08,DBLP:conf/patat/MullerRB04,DBLP:journals/eor/VermuytenLMB16}  can be classified into two major categories: examination timetabling~\cite{M2009} and course timetabling problems~\cite{di2007second}. Many different approaches have been successfully applied for solving these problems, namely  \gls{cp}~\cite{DBLP:conf/patat/MullerRB04}, \gls{ilp}~\cite{LINDAHL2019,DBLP:journals/eor/VermuytenLMB16}, and local search~\cite{DBLP:conf/patat/grasp}. 
 
 \begin{comment}
 These categories are characterized along these lines:
@@ -180,7 +180,7 @@ The \gls{mpp} adds an optimization criterion to the original problem. The goal o
 %Sakkout \emph{et al.}~\cite{DBLP:journals/constraints/SakkoutW00} propose an algorithm designed to minimally reconfigure schedules in response to a changing environment. The changes would cause the original schedule to invalid since more constraints were added. Zivan \emph{et al.}~\cite{DBLP:journals/constraints/ZivanGM11} proposed a two-stage method to solve \gls{mpp} considering the Hamming distance as the distance metric. The first stage consists of a branch and bound scheme with backtracking to find the largest partial solution for which the Hamming distance is 0. The second stage of the algorithm assigns values to the remainder of the solution.
 Muller \emph{et al.}~\cite{DBLP:conf/patat/MullerRB04} proposed the iterative forward search algorithm to solve the MPP applied to university timetabling. The authors only consider an \textit{assignment invalid} as a possible disruption. Since this method is a local search method, it does not ensure completeness. Phillips \emph{et al.}~\cite{APhillips2017} use integer programming to solve \gls{mpp} on instances from the University of Auckland. The authors considered the following disruptions: \textit{assignment invalid} and \textit{modify enrollments}. The proposed method tries to solve the problem in the smallest possible neighbourhood. If no feasible solution is found, then the neighbourhood is gradually expanded until either a feasible solution is found or the neighbourhood includes the whole search space. 
 
-More recently, Lindahl \emph{et al.}~\cite{LINDAHL2019} proposed a bi-objective integer programming model to solve MPP applied to curriculum-based course timetabling. The model was only able to solve the following disruptions: \textit{remove room for a day}, \textit{time unavailable}, \textit{insert curriculum}, and \textit{assignment invalid}. The goal is to find Pareto-optimal solutions for these two objectives: (i) minimize the number of perturbations and (ii) minimize the number of soft constraints unsatisfied. The results show that the \gls{mpp} solutions often have low quality and that allowing  few more perturbations can improve significantly the quality. Their approach evaluated with data sets from the 2007 \gls{itc}. 
+More recently, Lindahl \emph{et al.}~\cite{LINDAHL2019} proposed a bi-objective integer programming model to solve MPP applied to curriculum-based course timetabling. The model was only able to solve the following disruptions: \textit{remove room for a day}, \textit{time unavailable}, \textit{insert curriculum}, and \textit{assignment invalid}. The goal is to find Pareto-optimal solutions for these two objectives: (i) minimize the number of perturbations and (ii) minimize the number of soft constraints unsatisfied. The results show that the \gls{mpp} solutions often have low quality and that allowing  few more perturbations can significantly improve the quality. Their approach evaluated with data sets from the 2007 \gls{itc}. 
 
 
 
@@ -258,9 +258,10 @@ The constraints considered are as follows:
 \item {\em Room conflicts}: A room can have at most one lecture scheduled per time slot per day.
 \item {\em Teacher conflicts}: At-most $over_{\mathcal{L}_c^{i}}$ lectures from the same course can be lectured at the same time. 
 \item {\em Capacity}: Ensures that, in the worst case, only $\alpha$\% of the students enrolled may not be seated. %The number of attending students should be less or equal to the ideal capacity of the room where the lecture is scheduled. 
-\item {\em Compact timetable (COM)}: The goal is to reduce the number of gaps in a student's timetable.
 \item {\em Invalid Room $r,l$}: The assignment of the lecture $l$ to the room $r$ is invalid.
 \item {\em Invalid Time $d,t,l$}: The assignment of the lecture $l$ to the slot $t$ in day $d$ is invalid.
+\item {\em Compact timetable (COM)}: The \textbf{goal} is to reduce the number of gaps in a student's timetable.
+
 
 \end{enumerate}
 
@@ -283,7 +284,7 @@ The constraints considered are as follows:
 In addition to the different constraints, one needs to define an optimization criterion. The optimization criteria used should depend on the timing of the disruption. If this disruption happens before the semester start, one may want to take advantage of this disruption to further improve the solution even if it causes more perturbations in the original solution. On the other hand, if the disruption happens during the semester one wants to cause the least impact possible. 
 
 \begin{example}
-Let us consider again the example~\ref{ex:mov} shown in Figure~\ref{fig:before}. The disruptions: (i) the classroom L2 is closed and (ii) the lecture A\textsuperscript{L} cannot be overlapped. These disruptions cause the solution to be invalid. As explained above the optimal solution to \gls{mpp} has the value two, if one applies the Hamming distance. However, this may not be the best approach.
+Let us consider again the example~\ref{ex:mov} shown in Figure~\ref{fig:before}. The disruptions: (i) the classroom L2 is closed and (ii) the lecture A\textsuperscript{L} cannot be overlapped. These disruptions cause the solution to be infeasible. As explained above the optimal solution to \gls{mpp} has the value two, if one applies the Hamming distance. However, this may not be the best approach.
 
 There is more than one optimal solution to this problem when considering the Hamming distance. The solution shown in Figure~\ref{fig:after} is one. Another possible solution is to change A\textsuperscript{L} from Tuesday 10:30 to Tuesday 11. This allows the schedule for a student to be improved, as it reduces the number of gaps. This solution is shown in Figure~\ref{fig:aftermaybe}.
 
@@ -434,7 +435,7 @@ Utilization                                              & 41.61          & 64.7
 %\vspace{-.5cm}
 \end{table}
  
-\footnotetext{Each student is counted once for each course.}
+
 \subsection{Experimental Setup}
 %The solution was tested using the data sets from the courses taught in the Taguspark campus of \gls{ist}.
 The code and data sets are available at \burlalt{https://anonymous.4open.science/repository/bfa4b319-037c-4d51-956d-7d68f1ff6c99/}{https://anonymous.4open.science/repository/bfa4b319-037c-4d51-956d-7d68f1ff6c99/}.
@@ -443,17 +444,14 @@ The values for $\alpha$ were provided by domain experts of the university academ
 %The data set is divided into two different instances corresponding to the different semesters. The data contains information about student enrollment, curricular courses, original schedules, and rooms. 
 
 %The data used to test the system was obtained through the FenixEdu\texttrademark system public API\footnote{\href{http://fenixedu.org/dev/api/}{http://fenixedu.org/dev/api/}} which is in use at \gls{ist}. 
+\footnotetext{Each student is counted once for each course.}
 
-The tests were run using the runsolver tool~\cite{runsolver} with a time out of 600 seconds and a limit of 3 GB of memory. The implementation was run on a computer running Ubuntu 14, with 24 CPUs at 2.6 GHz and 64 Gb of RAM. The program was implemented in C++, using the XML parser \textit{RAPIDXML}\footnote{\textit{RAPIDXML} is available at: \url{http://rapidxml.sourceforge.net/manual.html}} to read the timetabling. The models were implemented using Gurobi\cite{gurobi}. The Gurobi solver was run with parameters \textit{GRB\_IntParam\_Threads = 3} and \textit{GRB\_IntParam\_Presolve = 0} for best performance.
+The tests were run using the runsolver tool~\cite{runsolver} with a time out of 600 seconds and a limit of 3 GB of memory. The implementation was run on a computer running Ubuntu 14, with 24 CPUs at 2.6 GHz and 64 Gb of RAM. The program was implemented in C++, using the XML parser \textit{RAPIDXML}\footnote{\textit{RAPIDXML} is available from \url{http://rapidxml.sourceforge.net/manual.html}} to read the timetabling. The models were implemented using Gurobi\cite{gurobi}. The Gurobi solver was run with parameters \textit{GRB\_IntParam\_Threads = 3} and \textit{GRB\_IntParam\_Presolve = 0} for best performance.
 
 
 \subsection{Generating Disruptions}
 
 To test our approach, we first analyzed the timetables from the last 5 years to identify which disruptions are the most common. These disruptions generally occur at the beginning of the new semester when a new timetable is generated. To compute the likelihood of a disruption to occur, we take into account the number of perturbations (Hamming distance) occurring from one year to another over the total number of variables.  
-
-
-
-
 
 \begin{table}[t]
 \caption{Average percentage of disruptions in the last 5 years.}
@@ -462,9 +460,9 @@ To test our approach, we first analyzed the timetables from the last 5 years to 
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
-Type of & Time& Room & Modify Enrolments & No overlap &  Modify Number of & Insert \\ 
+Type of & Time& Room & Modify Enrolments & No Overlap &  Modify Number of & Insert \\ 
 Disruption & Assignment & Assignment & Up (Down)  & Condition    & Lectures Insert (Remove)  & Curriculum    \\ \hline
-Percentage& 21 & 25  & 25 (27) & 11 & 14 (8) & $<$1 \\ \hline
+\% & 21 & 25  & 25 (27) & 11 & 14 (8) & $<$1 \\ \hline
 \end{tabular}}
 %\vspace{-.5cm}
 \end{table}
@@ -486,7 +484,7 @@ Percentage& 21 & 25  & 25 (27) & 11 & 14 (8) & $<$1 \\ \hline
 \end{figure}
 
 
-The average percentage of disruptions by type is shown in Table~\ref{tab:percentageD}. Note that \textit{Time} and \textit{Room Assignment} represent the probability of a specific lecture to have a preference or an impossibility in time or room assignment, respectively. We use these results to randomly generate the correct number of disruptions of the same types. The disruption was generated using a uniformly random distribution. %The developed tool allows the user to specify, in an input file, all the characteristics of the disruption to be generated.% (the file follows the format in Appendix~\ref{app:p1}).The disruption not shown in Table~\ref{tab:percentageD} were not found in the analysis of the timetable for the last 5 years.
+The average percentage of disruptions by type is shown in Table~\ref{tab:percentageD}. Note that \textit{time} and \textit{room assignment} represent the probability of a specific lecture to have a preference or a constraint in time or room assignment, respectively. We use these results to randomly generate the number of disruptions of the same type. The disruptions were randomly generated following an uniform distribution. %The developed tool allows the user to specify, in an input file, all the characteristics of the disruption to be generated.% (the file follows the format in Appendix~\ref{app:p1}).The disruption not shown in Table~\ref{tab:percentageD} were not found in the analysis of the timetable for the last 5 years.
 
 
  The information shown in Table~\ref{tab:percentageD} is not enough for generating the full set of disruptions. In some cases, it is also necessary to correctly quantify the perturbations in a given lecture/course. This is the case of two specific disruptions: \textit{modify enrollments} and \textit{modify number of lectures}.
@@ -495,23 +493,23 @@ The average percentage of disruptions by type is shown in Table~\ref{tab:percent
  
  The same process can be applied to find the correct distribution for the disruption \textit{modify number of lectures}. Figure~\ref{fig:normalDistShift} shows the comparison between the closest-fit normal distribution and our data set.
  
- To sum up, we generate the disruptions based on the history of disruptions of our case study. We generate the disruption randomly following different distributions: uniform and normal. When using the normal distribution we optimize the parameters to best fit the data. 
+ %To sum up, we generate the disruptions based on the history of disruptions of our case study. We generate the disruption randomly following different distributions: uniform and normal. When using the normal distribution, we optimize the parameters to best fit the data. 
  
 \subsection{Computational Results}
 
 
-\subsubsection{Original Problem} In a first approach, we compare the performance of two different models proposed in Section 4 solving the original version of the problem, \emph{i.e.} the problem before disruptions occur. To improve performance, we apply warm-start on the methods with the hand-made solution. Note that the hand-made solution is valid but not optimal. 
+\subsubsection{Original Problem} In a first approach, we compare the performance of the two different models (proposed in Section 4) when solving the original version of the problem, \emph{i.e.} before disruptions occur. To improve performance, we apply warm-start using the hand-made solution. Note that the hand-made solution is feasible but not optimal. 
 
-Table~\ref{tab:static} shows the results for the different models (\textsc{boolean}, and \textsc{mixed}) when solving the original problem with warm-start. One can see that the \textsc{boolean} model requires both quadratic (Q) and general (G) constraints. The \textsc{mixed} model requires fewer constraints and variables. In terms of CPU time, the \textsc{boolean} model is not able to find an optimal solution within the 600 seconds limit. %The \textsc{mixed}  model is the fastest to find the optimal solution for both instances.
+Table~\ref{tab:static} shows the results for the different models (\textsc{Boolean} and \textsc{mixed}) when solving the original problem with warm-start. Observe that the \textsc{Boolean} model requires both general (G) and quadratic (Q) constraints. The \textsc{mixed} model requires fewer constraints and variables. In terms of CPU time, the \textsc{Boolean} model is not able to find an optimal solution within the 600 seconds limit. %The \textsc{mixed}  model is the fastest to find the optimal solution for both instances.
 
-It is possible to reduce the size of the problem by reducing the number of students since not all students influence the solution. In this case, the students are used to identify the curricular path. It is natural that groups of students attend the same lectures. Therefore, one does not need to generate constraints for all students. The constraints can be generated only for \textit{distinct} students. In the data sets around 15\% of all students attend exactly the same lectures. This number is relatively small but allows us to reduce the number of total constraints an average in 10\% for each instance. 
+It is possible to reduce the size of the problem by reducing the number of students since not all students affect the solution. In this case, the students are used to identify the curricular path. It is natural that groups of students attend the same lectures. Therefore, one does not need to generate constraints for all students. The constraints can be generated only for \textit{distinct} students. In the data sets, around 15\% of all students attend exactly the same lectures. This number is relatively small but allows us to reduce the total number of constraints by 10\% on average for each instance. 
 
-To study the impact of the warm-start strategy on the CPU time, we run the tests with and without this strategy for the \textsc{mixed} model. The results from \textsc{FALL} and \textsc{SPRING} improve from 1822.57 and 1726.21 to 32.17 and 22.69, respectively.  The version with warm-start is two orders of magnitude faster. The hand-made solution, despite not being optimal, is a good starting point to the approach. 
+To study the impact of the warm-start strategy in the performance, we run the tests with and without this strategy for the \textsc{mixed} model. The results from \textsc{FALL} and \textsc{SPRING} improve from 1822.57 and 1726.21 to 32.17 and 22.69, respectively.  The version with warm-start is two orders of magnitude faster. The hand-made solution, despite not being optimal, is shown to be a good starting point. 
 
 
 
 \begin{table}[t]
-\caption{Results for \textsc{boolean} and \textsc{mixed} models solving the original problem with warm-start, considering quadratic (Q) and general (G) constraints. }
+\caption{Results for \textsc{Boolean} and \textsc{mixed} models solving the original problem with warm-start, considering general (G) and quadratic (Q) constraints. }
 \label{tab:static}
 \centering
 \resizebox{\textwidth}{!}{%
@@ -519,7 +517,7 @@ To study the impact of the warm-start strategy on the CPU time, we run the tests
 \cline{2-5}
 
                                                         & \multicolumn{2}{c|}{\textsc{FALL}}   & \multicolumn{2}{c|}{\textsc{SPRING}} \\ \cline{2-5} 
-                                                         & \textsc{boolean}     & \textsc{mixed}  & \textsc{boolean}    & \textsc{mixed}  \\ \hline
+                                                         & \textsc{Boolean}     & \textsc{mixed}  & \textsc{Boolean}    & \textsc{mixed}  \\ \hline
 %\multicolumn{1}{|c|}{Total CPU Time (s)} &  668.76                & 62.17      &   663.22        & 48.69      \\ \cline{1-5} 
 \multicolumn{1}{|l|}{CPU Time (s)} & Time Out                  & 32.17      &    Time Out              & 22.69      \\ \cline{1-5} 
 \multicolumn{1}{|l|}{Optimal}                        &   N/A              &  Found     &    N/A               &  Found     \\ \hline
@@ -543,17 +541,17 @@ To study the impact of the warm-start strategy on the CPU time, we run the tests
 \end{tabular}
 \end{comment}
 
-\vspace{-0.6cm}
+\vspace{-0.4cm}
 
 \subsubsection{MPP}
 
-The models proposed in this paper were also tested in recovery after disruptions. For each disruption type, 50 different instances were created. Once again and as expected, the \textsc{mixed} model outperforms the \textsc{boolean} model. For this reason, only the results for the \textsc{mixed} model are shown in Table~\ref{tab:recovery}. In order to improve performance, the warm-start strategy was modified to only add a partial solution (the variables that were changed by the disruption are not added).
+The models proposed in this paper were also tested in the presence of disruptions. For each disruption type, 50 different instances were created. Once again and as expected, the \textsc{mixed} model outperforms the \textsc{Boolean} model. For this reason, only the results for the \textsc{mixed} model are shown in Table~\ref{tab:recovery}. In order to improve performance, the warm-start strategy was modified to only add a partial solution (the variables that were affected by the disruption are not added).
 
-The \textsc{SPRING} instance is easier to solve since it has a smaller number of lectures to assign. This fact can be explained by the natural organization of the curricular plans, where the \textsc{SPRING} semester contains the dissertation course which does not have any lectures. 
+The \textsc{SPRING} instance is easier to solve since it has a smaller number of lectures to assign. This fact can be explained by the organization of the curricular plans. %, where the \textsc{SPRING} semester contains the dissertation course which does not have any lectures. 
 
-Let us now analyze the performance. The \textit{Modify Enrollment} disruption is the easiest tested. This can be explained by the fact the disruption adds, in general, only a small number of students. The use of slack in the capacities also contributes to an easier resolution. This is the only disruption that is able to improve the value of the COM. This disruption also includes a small possibility of reducing the number of students enrolled. \textit{Modify enrollments} is the only disruption to have all instances with a feasible solution. 
+Let us now analyze the performance. The \textit{modify enrollment} disruption instances are the easiest to be solved. This can be explained by the fact the disruption adds, in general, only a small number of students. The use of slack in the room capacities also contributes to a better performance. This is the only disruption that is able to improve the value of the COM. This disruption also allows reducing the number of students enrolled. \textit{Modify enrollments} is the only disruption to have all instances with a feasible solution. 
 
-The disruptions \textit{Invalid Time Assignment} and \textit{Invalid Room Assignment} cannot lead to a solution with improved optimization value with respect to the original. These disruptions only add new constraints to the problem. The results show that the quality of the solution is worse after these disruptions. Note that, some of these disruptions cause the instance to be invalid. Our approach finds optimal solutions to all instances with feasible solutions. The \textit{Invalid Time Assignment} disruption is the only one to exceed the time limit before finding a solution. 
+The disruptions \textit{invalid time assignment} and \textit{invalid room assignment} cannot lead to a solution with an improved optimization value, given that these disruptions only add new constraints to the problem. The results show that the quality of the solution gets worse with these disruptions. Note that these disruptions may cause the instance to be infeasible. For all instances with feasible solutions, our approach finds optimal solutions. The \textit{invalid time assignment} disruption is the only one to reach the time limit before finding a solution. 
 
 %Globally, one can see that optimizing using COM causes more perturbations in the solution and affects more students. This result confirms the results obtained by Lindahl~\cite{LINDAHL2019}, where is said that performing more perturbation can improve the quality of the solution. Optimizing based the WHD criteria also causes more perturbation but reduces the number of students affected by the change.  
 
@@ -562,7 +560,7 @@ The disruptions \textit{Invalid Time Assignment} and \textit{Invalid Room Assign
 
 
 \begin{table}[t]
-\caption{Results for the most common disruptions using the \textsc{mixed} model. TO stands for time out, and  $\delta$ COM measures the change in the optimal value. }
+\caption{Results for the most common disruptions using the \textsc{mixed} model. TO stands for time out, and  $\delta_{COM}$ measures the perturbations in the optimal value. }
 \label{tab:recovery}
 \centering
 \resizebox{\textwidth}{!}{%
@@ -572,24 +570,24 @@ The disruptions \textit{Invalid Time Assignment} and \textit{Invalid Room Assign
                    & \textsc{FALL}                &  \textsc{SPRING}   & \textsc{FALL}                &  \textsc{SPRING}    & \textsc{FALL}                &  \textsc{SPRING}      \\ \hline
  \multicolumn{1}{|c|}{Avg Time (s)}  & 46.2 & 20.65          & TO & TO       &73.36 &60.52                \\ \cline{1-7} 
   \multicolumn{1}{|c|}{Median Time (s)}   & 46.23 & 20.16     & TO &TO     & 72.34 &  59.95                      \\ \cline{1-7} 
- \multicolumn{1}{|c|}{Avg $\delta$ COM} & -1 & -1.5       & N/A & N/A     & 0.5&        0           \\ \cline{1-7} 
+ \multicolumn{1}{|c|}{Avg $\delta_{COM}$} & -1 & -1.5       & N/A & N/A     & 0.5&        0           \\ \cline{1-7} 
   \multicolumn{1}{|c|}{COM \% Optimal }   & 100                 &    100  & N/A & N/A  &80 & 90           \\ \cline{1-7} 
   \multicolumn{1}{|c|}{\% Feasible Solution} & 100 & 100   & N/A & N/A                & 80&   90            \\ \hline
 \end{tabular}}
 \vspace{-.5cm}
 \end{table}
-\vspace{-1.5cm}
+\vspace{-0.4cm}
 
 
 \subsubsection{Incremental Approach for Recovery after Disruption}
 
-The simple recovery process takes too long for the \textit{Invalid Time Assignment} disruption. Therefore, we propose an incremental process to reduce the search space by splitting the problem into two stages.  A disruption of the type \textit{Invalid time assignment} definitely causes a change in the time slots of the lecture. However, it may not be necessary to modify the room assignment. For this reason, we divide the problem into the problem of assignment of lectures to rooms and the whole problem. The first stage has to deal with all the constraints relating to time slots, where one has to consider a solution to the problem of assigning rooms to lectures. In this case, the hand-made solution for this sub-problem is added to the model as static. The second stage applies a warm-start with the results of the first stage, possibly improving its quality. This division does not reduce possible solutions since the second stage includes the whole problem again. This decomposition can be changed (\emph{i.e.} start with the problem of assigning lectures to rooms) depending on the disruption since we know beforehand which part of the problem must change. 
+The simple recovery process takes too long for the \textit{invalid time assignment} disruption. Therefore, we propose an incremental approach to reduce the search space by splitting the problem into two stages.  A disruption of the type \textit{invalid time assignment} clearly causes a change in the time slots of the lecture. However, it may not be necessary to modify the room assignment. For this reason, we divide the problem into: (i) the problem of assignment of lectures to rooms and (ii) the whole problem. The first stage has to deal with all the constraints relating to time slots, where one has to consider a solution to the problem of assigning rooms to lectures. In this case, the hand-made solution for this sub-problem is added to the model as static. The second stage applies a warm-start with the results of the first stage, possibly improving its quality. This division does not exclude possible solutions since the second stage includes the whole problem again. This decomposition can be changed (\emph{i.e.} start with the problem of assigning lectures to rooms) depending on the disruption since we know beforehand which part of the problem must change. 
 
-Table~\ref{tab:ite} shows the results for the \textit{Invalid time assignment} disruption, where one can see that the incremental process is much faster. In this case, the second stage does not improve the quality of the solution. However, it proves the solution found is optimal.
+Table~\ref{tab:ite} shows the results for the \textit{invalid time assignment} disruption, where one can see that the incremental process is much faster. In this case, the second stage does not improve the quality of the solution. However, it proves the solution to be optimal.
 
 \begin{table}[t]
 \centering
-\caption{Incremental approach to recover after disruptions of the type \textit{Invalid Time}. $\delta$ COM measures the change in the optimal value.}
+\caption{Incremental approach to recover after disruptions of the type \textit{invalid time}. $\delta_{COM}$ measures the change in the optimal value.}
 \label{tab:ite}
 \begin{tabular}{c|c|c|c|c|}
 \cline{2-5}
@@ -597,7 +595,7 @@ Table~\ref{tab:ite} shows the results for the \textit{Invalid time assignment} d
                                                       & Stage 1     & Stage 2     & Stage 1      & Stage 2      \\ \hline
 \multicolumn{1}{|c|}{Avg Time (s)}                & 239.02 & 68.67 & 210.68      & 58.4         \\ \hline
 \multicolumn{1}{|c|}{Median Time (s)}                 & 282         & 68          & 231.24       & 58           \\ \hline
-\multicolumn{1}{|c|}{Avg $\delta$ COM}                     & 2           & 2           & 1            & 1            \\ \hline
+\multicolumn{1}{|c|}{Avg $\delta_{COM}$ }                     & 2           & 2           & 1            & 1            \\ \hline
 \multicolumn{1}{|c|}{\% Feasible Solution} & \multicolumn{2}{c|}{85}   & \multicolumn{2}{c|}{90}     \\ \hline
 \end{tabular}
 \vspace{-.5cm}
@@ -606,7 +604,7 @@ Table~\ref{tab:ite} shows the results for the \textit{Invalid time assignment} d
 
 \section{Conclusion and Future Work}\label{sec:con}
 
-This paper discusses the problem of solving university timetabling after some disruption events occur. The integer programming models proposed are able to find a new valid solution for most common university timetabling disruption scenarios. 
+This paper discusses the problem of solving university timetabling after some disruption events occur. The integer programming models proposed are able to find a new feasible solution for most common university timetabling disruption scenarios. 
 %
 To improve the performance, we propose an incremental algorithm that divides the problem into two stages: the problem of assignment of lectures to rooms and the whole problem. The incremental algorithm is able to reduce the size and execution time without losing quality. 
 %
